--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,9 +8,9 @@
 
 <div class="info">
   <p>
-Growing up, Destiny dreamed of escaping into a fanatasy world filled with werewolves, demons, and terrifying, yet alluring creatures of the dark. Her imagination grew wider and wilder until one day she decided to share the worlds inside of her mind with people who desired the same type of escape.
+Growing up, Destiny dreamed of escaping into a fantasy world filled with werewolves, demons, and terrifying, yet alluring creatures of the dark. Her imagination grew wider and wilder until one day she decided to share the worlds inside of her mind with people who desired the same type of escape.
 With over six million reads on Wattpad, Destiny's trilogy The Marking has been very popular among the werewolf Wattpad community.
 </p><p>
-For as long as she could remember, Destiny has been writing. She's an inverted and shy person at heart, so written prose and words have always been her perferred choice of communicating her thoughts. Desperate to express the daydreams in her head, she turned to writing. She enjoys writing fanasty romance because it is an escape to a whole different world.
+For as long as she could remember, Destiny has been writing. She's an inverted and shy person at heart, so written prose and words have always been her preferred choice of communicating her thoughts. Desperate to express the daydreams in her head, she turned to writing. She enjoys writing fantasy romance because it is an escape to a whole different world.
 </p>
 </div>
